--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="quiz-bg"></div>
   <div class="container">
-    
+    <h1>Wer wird KI-llionär?</h1>
     <p>Wähle ein Thema oder gib eins ein:</p>
 
-    <input type="text" id="themaInput" placeholder="z.B. Tiere, Harry Potter, Raumfahrt" />
+    <input type="text" id="themaInput" placeholder="z.B. Politik, Harry Potter, Fussball" />
     <label for="levelSelect" style="color: white;">Schwierigkeitsstufe:</label>
     <select id="levelSelect">
-      <option value="Anfänger">Anfänger</option>
-      <option value="Kandidat">Kandidat</option>
-      <option value="Halbfinale">Halbfinale</option>
-      <option value="Finale">Finale</option>
-      <option value="Quizchampion">Quizchampion</option>
+      <option value="Anfänger">Hohlbirne</option>
+      <option value="Kandidat">Alltagsdenker</option>
+      <option value="Halbfinale">Klugscheißer</option>
+      <option value="Finale">Besserwisser-Genie</option>
+      <option value="Quizchampion">Superhirn mit Dachschaden</option>
     </select>
     
     <div class="grid-themen">
@@ -35,7 +36,7 @@
       <div class="thema-card">Kunst</div>
       <div class="thema-card">Literatur</div>
       <div class="thema-card">Technik</div>
-      <div class="thema-card">Mythen</div>
+      <div class="thema-card">Astronomie</div>
       <div class="thema-card">Physik</div>
       <div class="thema-card">Psychologie</div>
       <div class="thema-card">Raumfahrt</div>
