--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
       <div class="thema-card">Essen & Trinken</div>
       <div class="thema-card">Sport</div>
       <div class="thema-card">Geografie</div>
+      <div class="thema-card">Bücher &<br>Literatur</div>
       <div class="thema-card">Musik</div>
       <div class="thema-card">Kunst</div>
-      <div class="thema-card">Literatur</div>
+      <div class="thema-card">Medizin &<br>Gesundheit</div>
       <div class="thema-card">Technik</div>
       <div class="thema-card">Astronomie</div>
       <div class="thema-card">Physik</div>
       <div class="thema-card">Psychologie</div>
       <div class="thema-card">Raumfahrt</div>
+      <div class="thema-card">Wirtschaft &<br>Finanzen</div>
     </div>
 
     <button id="startBtn" disabled>Quiz starten</button>
