--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="thema-card">Medizin &<br>Gesundheit</div>
       <div class="thema-card">Technik</div>
       <div class="thema-card">Astronomie</div>
-      <div class="thema-card">Physik</div>
+      <div class="thema-card">Recht</div>
       <div class="thema-card">Psychologie</div>
       <div class="thema-card">Raumfahrt</div>
       <div class="thema-card">Wirtschaft &<br>Finanzen</div>
